--- a/cpd-portal/src/app/pages/admin/calendar/calendar.html
+++ b/cpd-portal/src/app/pages/admin/calendar/calendar.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="calendar-actions">
-            <button class="btn btn-primary" (click)="openModal()">+ Schedule Course</button>
+            <!-- View Only -->
         </div>
     </div>
 
